--- a/login.html
+++ b/login.html
@@ -18,6 +18,7 @@
       <br />
       <button type="submit">Iniciar Sesión</button>
     </form>
-    <p>¿No tienes una cuenta? <a href="registro.html">Regístrate aquí</a></p>
+    <!-- <p>¿No tienes una cuenta? <a href="registro.html">Regístrate aquí</a></p>
+    -->
   </body>
 </html>
