--- a/pages/registro.html
+++ b/pages/registro.html
@@ -18,6 +18,6 @@
       <br />
       <button type="submit">Registrar</button>
     </form>
-    <p>¿Ya tienes una cuenta? <a href="login.html">Inicia sesión aquí</a></p>
-  </body>
+    <!--<p>¿Ya tienes una cuenta? <a href="login.html">Inicia sesión aquí</a></p>
+  --></body>
 </html>
