--- a/pages/agregar.html
+++ b/pages/agregar.html
@@ -3,87 +3,62 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Agregar Producto</title>
+    <title>Agregar Equipo Fiscalía</title>
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
     <header>
-      <h1>Agregar Producto</h1>
+      <h1>Agregar Equipo Fiscalía</h1>
     </header>
     <form id="formProducto" action="../php/guardar_producto.php" method="POST">
-      <div>
-        <label for="tipo">Tipo de Producto:</label>
+      <!-- COLUMNA IZQUIERDA -->
+      <div class="form-group">
+        <label for="tipo">Tipo:</label>
         <select id="tipo" name="tipo" required>
           <option value="" disabled selected>Seleccionar</option>
           <option value="Notebook">Notebook</option>
           <option value="Cámara web">Cámara web</option>
           <option value="Disco duro">Disco duro</option>
           <option value="Parlantes">Parlantes</option>
-          <option value="monitor">Monitor</option>
-          <option value="lector">Lector Código de Barra</option>
+          <option value="Monitor">Monitor</option>
+          <option value="otro">Otro</option>
         </select>
+        <input
+          type="text"
+          id="otroTipo"
+          name="otroTipo"
+          placeholder="Especificar otro tipo"
+          style="display: none"
+        />
       </div>
-
-      <div>
-        <label for="codigoUAF">Código UAF:</label>
-        <input type="text" id="codigoUAF" name="codigoUAF" required />
-      </div>
-
-      <div>
-        <label for="sn">Número de Serie (S/N):</label>
-        <input type="text" id="sn" name="sn" required />
-      </div>
-
-      <div>
+      <div class="form-group">
         <label for="marca">Marca:</label>
         <input type="text" id="marca" name="marca" required />
       </div>
-
-      <div>
+      <div class="form-group">
         <label for="modelo">Modelo:</label>
         <input type="text" id="modelo" name="modelo" required />
       </div>
-
-      <div>
-        <label for="descripcion">Descripción:</label>
-        <textarea id="descripcion" name="descripcion"></textarea>
+      <div class="form-group">
+        <label for="sn">Número de Serie (S/N):</label>
+        <input type="text" id="sn" name="sn" required />
       </div>
-
-      <div>
+      <div class="form-group">
+        <label for="mac">MAC:</label>
+        <input type="text" id="mac" name="mac" />
+      </div>
+      <div class="form-group">
         <label for="estado">Estado:</label>
         <select id="estado" name="estado" required>
           <option value="" disabled selected>Seleccionar</option>
           <option value="Nuevo">Nuevo</option>
           <option value="Usado">Usado</option>
-          <option value="Malo">Malo</option>
+          <option value="Defectuoso">Defectuoso</option>
         </select>
       </div>
 
-      <div>
-        <label for="usuario">Usuario:</label>
-        <input type="text" id="usuario" name="usuario" />
-      </div>
-
-      <div>
-        <label for="edificio">Edificio:</label>
-        <select id="edificio" name="edificio" required>
-          <option value="" disabled selected>Seleccionar</option>
-          <option value="Cooper">Cooper</option>
-          <option value="Departamental">Departamental</option>
-          <option value="Puente Alto">Puente Alto</option>
-          <option value="Ochagavia">Ochagavia</option>
-          <option value="UJO">UJO</option>
-          <option value="CJ">Centro Justicia</option>
-          <option value="TPuente">Tribunal Puente Alto</option>
-          <option value="ECOH">Catedral - ECOH RM</option>
-        </select>
-      </div>
-
-      <div>
-        <label for="piso">Piso:</label>
-        <input type="number" id="piso" name="piso" min="1" />
-      </div>
-
-      <div>
+      <!-- COLUMNA DERECHA -->
+      <div class="form-group">
         <label for="asignado">Asignación:</label>
         <select id="asignado" name="asignado" required>
           <option value="" disabled selected>Seleccionar</option>
@@ -91,8 +66,25 @@
           <option value="No Asignado">Sin Asignar</option>
         </select>
       </div>
-
-      <div>
+      <div class="form-group">
+        <label for="usuario">Usuario:</label>
+        <input type="text" id="usuario" name="usuario" />
+      </div>
+      <div class="form-group">
+        <label for="edificio">Edificio:</label>
+        <select id="edificio" name="edificio" required>
+          <option value="" disabled selected>Seleccionar</option>
+          <option value="San_miguel">San Miguel</option>
+          <option value="Departamental">Departamental</option>
+          <option value="Puente_Alto">Puente Alto</option>
+          <option value="Ochagavia">Bodega Ochagavía</option>
+          <option value="UJO">UJO</option>
+          <option value="CJ">Centro Justicia Santiago</option>
+          <option value="TPuente">Tribunal Puente Alto</option>
+          <option value="ECOH">Catedral - ECOH RM</option>
+        </select>
+      </div>
+      <div class="form-group">
         <label for="unidadFL">Unidad o FL:</label>
         <select id="unidadFL" name="unidadFL" required>
           <option value="" disabled selected>Seleccionar</option>
@@ -120,24 +112,38 @@
           <option value="Atención Público">Atención a Público</option>
         </select>
       </div>
-
-      <div>
-        <label for="fechaAsignacion">Fecha de asignación:</label>
-        <input type="date" id="fechaAsignacion" name="fechaAsignacion" />
+      <div class="form-group">
+        <label for="piso">Piso:</label>
+        <input type="number" id="piso" name="piso" min="1" />
       </div>
-
-      <div>
+      <div class="form-group">
+        <label for="fechaAsignacion">Fecha de asignación:</label>
+        <input
+          type="date"
+          id="fechaAsignacion"
+          name="fechaAsignacion"
+          required
+        />
+      </div>
+      <div class="form-group">
         <label for="fechaBaja">Fecha de baja:</label>
         <input type="date" id="fechaBaja" name="fechaBaja" />
       </div>
 
-      <button type="submit">Guardar</button>
-      <a href="../php/exportar_excel.php" target="_blank">Exportar a Excel</a>
+      <div class="form-group">
+        <label for="descripcion">Descripción:</label>
+        <textarea id="descripcion" name="descripcion"></textarea>
+      </div>
+
+      <div class="button-container">
+        <button id="volver" onclick="window.location.href='../index.html'">
+          Volver
+        </button>
+
+        <button type="submit">Guardar</button>
+      </div>
     </form>
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        console.log("DOM cargado correctamente.");
-      });
-    </script>
+
+    <script src="../js/agregar.js"></script>
   </body>
 </html>
