--- a/pages/agregar_prov.html
+++ b/pages/agregar_prov.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Agregar Equipo Proveedor</title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
     <header>
       <h1>Agregar Equipo Proveedor</h1>
     </header>
-    <form id="formProducto" action="../php/guardar_producto.php" method="POST">
+    <form
+      id="formProducto"
+      action="../php/guardar_producto_prov.php"
+      method="POST"
+    >
       <div class="form-group">
         <label for="tipo">Tipo:</label>
         <select id="tipo" name="tipo" required>
@@ -70,7 +74,7 @@
         <select id="asignado" name="asignado" required>
           <option value="" disabled selected>Seleccionar</option>
           <option value="Asignado">Asignado</option>
-          <option value="No Asignado">Sin Asignar</option>
+          <option value="no-asignado">Sin Asignar</option>
         </select>
       </div>
 
@@ -150,13 +154,15 @@
           type="date"
           id="fechaAsignacion"
           name="fechaAsignacion"
-          required
         />
       </div>
 
       <div class="form-group">
         <label for="fechaBaja">Fecha de baja:</label>
-        <input type="date" id="fechaBaja" name="fechaBaja" />
+        <input 
+          type="date" 
+          id="fechaBaja" 
+          name="fechaBaja" />
       </div>
 
       <div class="form-group">
